added messaging service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,15 @@ jmix.ui.main-screen-id = MainScreen
 jmix.ui.menu-config = com/company/haulmont/menu.xml
 jmix.ui.composite-menu = true
 
+#Email. SMTP Google TODO настроить почту для отправки
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=username
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 jmix.core.available-locales = en,ru
 
 logging.level.org.atmosphere = warn
