Fixed the work of the service for sending messages.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Database
 main.datasource.url = jdbc:postgresql://localhost/haulmont
 main.datasource.username = postgres
 main.datasource.password =postgres
@@ -7,12 +8,12 @@ jmix.ui.main-screen-id = MainScreen
 jmix.ui.menu-config = com/company/haulmont/menu.xml
 jmix.ui.composite-menu = true
 
-#Email. SMTP Google TODO настроить почту для отправки
+#Email. SMTP Google
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.protocol=smtp
-spring.mail.username=username
-spring.mail.password=password
+spring.mail.username=${LOGIN}
+spring.mail.password=${PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
