--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'io.jmix.email:jmix-email-starter'
     implementation 'io.jmix.email:jmix-email-ui-starter'
     implementation 'io.jmix.translations:jmix-translations-ru'
+    implementation "io.jmix.quartz:jmix-quartz-starter"
 }
 
 test {
