Added a screen to display all contracts for a specific client. Added color highlighting of active contracts on the "Client contracts" tab.(custom style connected)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ logging.level.io.jmix.core.AccessLogger = debug
 
 # 'debug' level logs all Jmix debug output
 logging.level.io.jmix = info
+
+#Theme
+jmix.ui.theme.name=custom
+jmix.ui.theme-config=com/company/haulmont/theme/custom-theme.properties
