--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,6 @@ dependencies {
     implementation 'io.jmix.data:jmix-eclipselink-starter'
     implementation 'io.jmix.ui:jmix-ui-starter'
     implementation 'io.jmix.ui:jmix-ui-data-starter'
-    implementation 'io.jmix.ui:jmix-ui-themes-compiled'
     implementation 'io.jmix.ui:jmix-ui-widgets-compiled'
     implementation 'io.jmix.security:jmix-security-starter'
     implementation 'io.jmix.security:jmix-security-ui-starter'
@@ -44,6 +43,8 @@ dependencies {
     implementation 'io.jmix.email:jmix-email-ui-starter'
     implementation 'io.jmix.translations:jmix-translations-ru'
     implementation "io.jmix.quartz:jmix-quartz-starter"
+    themes 'io.jmix.ui:jmix-ui-themes'
+    implementation 'io.jmix.ui:jmix-ui-themes'
 }
 
 test {
