--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
     implementation 'org.postgresql:postgresql'
     implementation 'io.jmix.email:jmix-email-starter'
     implementation 'io.jmix.email:jmix-email-ui-starter'
@@ -45,6 +46,8 @@ dependencies {
     implementation "io.jmix.quartz:jmix-quartz-starter"
     themes 'io.jmix.ui:jmix-ui-themes'
     implementation 'io.jmix.ui:jmix-ui-themes'
+    implementation 'io.jmix.emailtemplates:jmix-emailtemplates-starter'
+    implementation 'io.jmix.emailtemplates:jmix-emailtemplates-ui-starter'
 }
 
 test {
